<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="285dp"
        android:layout_height="355dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/popupResul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/resultado_do_imc"
                android:textAlignment="center"
                android:textColor="@color/verde_escuro"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/popupTitulo"
                android:layout_width="wrap_content"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/resultado"
                android:textAlignment="center"
                android:textColor="@color/verde_escuro"
                android:textSize="85sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/popupPesoIdeal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/seu_imc_ideal"
                android:textColor="@color/cinza_escuro"
                android:textSize="13sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/popupClassificacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/resultado"
                android:textColor="@color/verde_escuro"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/popupMensagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="@string/mensagem_motivacional"
                android:textColor="@color/verde_claro"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="12sp" />

            <Button
                android:id="@+id/popupButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="18dp"
                android:textStyle="bold"
                android:backgroundTint="@color/verde_claro"
                android:text="@string/ok" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>