<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logoImcMainActivity"
        android:layout_width="228dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo_imc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.267"
        app:srcCompat="@drawable/imc" />

    <Button
        android:id="@+id/btnCalculadoraImc"
        android:layout_width="267dp"
        android:layout_height="77dp"
        android:backgroundTint="@color/verde_claro"
        android:text="@string/btnMainActivity"
        android:textColor="@color/branco"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImcMainActivity"
        app:layout_constraintVertical_bias="0.614" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="270dp"
        android:layout_height="72dp"
        android:text="@string/tituloTelaInicial"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/verde_escuro"
        app:layout_constraintBottom_toTopOf="@+id/btnCalculadoraImc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImcMainActivity" />
</androidx.constraintlayout.widget.ConstraintLayout>