<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/branco"
    tools:context=".categoriasimc.SobrepesoActivity">

    <ImageView
        android:id="@+id/imgAbaixoPeso"
        android:layout_width="308dp"
        android:layout_height="285dp"
        android:contentDescription="@string/pessoa_com_sobrepeso"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        app:srcCompat="@drawable/imcsobrepeso" />

    <TextView
        android:id="@+id/tituloAbaixoPesoActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confira_o_resultado"
        android:textColor="@color/verde_escuro"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/resultadoPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_verde_claro"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/resultadoAltura"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <TextView
        android:id="@+id/resultadoAltura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_verde_claro"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/cinza_escuro"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/resultadoPeso"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <TextView
        android:id="@+id/resultadoImc"
        android:layout_width="245dp"
        android:layout_height="43dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/borda_verde_claro"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/cinza_escuro"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <TextView
        android:id="@+id/mensagemApoioAbaixoPeso"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:layout_marginBottom="34dp"
        android:text="@string/mensagem_de_apoio"
        android:textAlignment="textStart"
        android:textColor="@color/verde_escuro"
        app:layout_constraintBottom_toTopOf="@+id/btnFecharAbaixoPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultadoImc"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/classificacaoAbaixoPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/borda_verde_claro"
        android:padding="10dp"
        android:text="@string/resultado"
        android:textAlignment="center"
        android:textColor="@color/verde_escuro"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <Button
        android:id="@+id/btnFecharAbaixoPeso"
        android:layout_width="173dp"
        android:layout_height="49dp"
        android:backgroundTint="@color/verde_claro"
        android:text="@string/fechar"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <TextView
        android:id="@+id/textCuidarSaude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuide_saude"
        android:textColor="@color/cinza_escuro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <ImageView
        android:id="@+id/alertIcon1"
        android:layout_width="123dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276"
        app:srcCompat="@drawable/alert" />

</androidx.constraintlayout.widget.ConstraintLayout>